syntax = "proto3";

package note.v1;

option go_package = "github.com/iruldev/golang-api-hexagonal/proto/note/v1;notev1";

import "google/protobuf/timestamp.proto";

// Note represents a note entity in the system.
message Note {
  // Unique identifier for the note (UUID format).
  string id = 1;
  
  // Title of the note (required, max 255 chars).
  string title = 2;
  
  // Content/body of the note.
  string content = 3;
  
  // Timestamp when the note was created.
  google.protobuf.Timestamp created_at = 4;
  
  // Timestamp when the note was last updated.
  google.protobuf.Timestamp updated_at = 5;
}

// CreateNoteRequest is the request message for creating a new note.
message CreateNoteRequest {
  // Title for the new note (required).
  string title = 1;
  
  // Content/body for the new note.
  string content = 2;
}

// CreateNoteResponse is the response message containing the created note.
message CreateNoteResponse {
  // The created note.
  Note note = 1;
}

// GetNoteRequest is the request message for retrieving a note by ID.
message GetNoteRequest {
  // Unique identifier of the note to retrieve (UUID format).
  string id = 1;
}

// GetNoteResponse is the response message containing the requested note.
message GetNoteResponse {
  // The requested note.
  Note note = 1;
}

// ListNotesRequest is the request message for listing notes with pagination.
message ListNotesRequest {
  // Maximum number of notes to return (default: 10, max: 100).
  int32 page_size = 1;
  
  // Token for the page to retrieve. Empty string for first page.
  string page_token = 2;
}

// ListNotesResponse is the response message containing a list of notes.
message ListNotesResponse {
  // List of notes.
  repeated Note notes = 1;
  
  // Token for retrieving the next page. Empty if no more pages.
  string next_page_token = 2;
  
  // Total count of notes (for pagination info).
  int64 total_count = 3;
}

// UpdateNoteRequest is the request message for updating an existing note.
message UpdateNoteRequest {
  // Unique identifier of the note to update (UUID format).
  string id = 1;
  
  // New title for the note.
  string title = 2;
  
  // New content for the note.
  string content = 3;
}

// UpdateNoteResponse is the response message containing the updated note.
message UpdateNoteResponse {
  // The updated note.
  Note note = 1;
}

// DeleteNoteRequest is the request message for deleting a note.
message DeleteNoteRequest {
  // Unique identifier of the note to delete (UUID format).
  string id = 1;
}

// DeleteNoteResponse is the response message for a delete operation.
message DeleteNoteResponse {
  // Empty response - success is indicated by the absence of an error.
}

// NoteService provides CRUD operations for notes.
service NoteService {
  // CreateNote creates a new note.
  // Returns INVALID_ARGUMENT if title is empty or too long.
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  
  // GetNote retrieves a note by its ID.
  // Returns NOT_FOUND if the note doesn't exist.
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  
  // ListNotes retrieves a paginated list of notes.
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  
  // UpdateNote updates an existing note.
  // Returns NOT_FOUND if the note doesn't exist.
  // Returns INVALID_ARGUMENT if title is empty or too long.
  rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse);
  
  // DeleteNote removes a note by its ID.
  // Returns NOT_FOUND if the note doesn't exist.
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse);
}
